assets/css/main.css
body {
  padding-top: 30px;

  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */

  -webkit-box-flex-direction: column;
  -moz-box-flex-direction: column;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;

  -webkit-box-justify-content: center;
  -moz-box-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;

  -webkit-box-align-items: center;
  -moz-box-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;

  /*background-image: url('https://s-media-cache-ak0.pinimg.com/originals/f3/d8/aa/f3d8aa396f614dc0878e324f27fcff7c.jpg');*/
}

#column {
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */

  -webkit-box-flex-direction: column;
  -moz-box-flex-direction: column;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;

  -webkit-box-justify-content: center;
  -moz-box-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;

  -webkit-box-align-items: center;
  -moz-box-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
}

#icons {
  padding-left: 50px;
  padding-right: 50px;

  -webkit-box-justify-content: space-around;
  -moz-box-justify-content: space-around;
  -webkit-justify-content: space-around;
  -ms-justify-content: space-around;
  justify-content: space-around;

  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
}

a {
  color: #1C77C3;
}

a:hover {
  color: black; 
  text-decoration: none;
}

a:visited {
}

h3 {
  margin: 0;
  padding-bottom: 10px;
  font-family: VT323;
  font-size: 30px;
}

.content {
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex; 

  -webkit-box-flex-direction: row;
  -moz-box-flex-direction: row;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;

  -webkit-box-justify-content: center;
  -moz-box-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;

  -webkit-box-flex-align-items: center;
  -moz-box-flex-align-items: center;
  -webkit-flex-align-items: center;
  -ms-flex-align-items: center;
  align-items: center;

  max-width: 500px;

  padding-bottom: 10px;
}

#section0 {
  border: 2px #BF1A2F solid;
  padding: 10px;
  border-top: 0;
}

#section {
  border: 2px #FFC522 solid;
  padding: 10px;
}

#section a {
  color: #D89E00;
}

#section2 {
  border: 2px #018E42 solid;
  padding: 10px;
}

#section2 a {
  color: #00863A;
}

#section2 a:hover {
  color: #0000002;
}

#section3 {
  border: 2px #454E9E solid;
  padding: 10px;
}

#section3 a {
  color: #3D4696;
}

#title {
  font-size: 35px;
  font-family: Montserrat;
  margin-left: 15px;
  padding-right: 10px;
}

#pic {
  width: 100px;
  border-radius: 50%;
  height: auto;
  opacity: 1;
}

#text {
  margin: 10px;
  max-width: 500px;
}

.icon {
  opacity: 0.75;
  color: black;
}

.icon:hover {
  opacity: 1;
}

.icon.red {
  color: #BF1A2F;
}

.icon.yellow {
  color: #FFC522;
}

.icon.green {
  color: #018E42;
}

.icon.blue {
  color: #454E9E;
}

.icon.purple {
  color: #5B326B;
}

.sub {
  color: #9C9C9C;
}

.card {
  padding-top: 5px;
  padding-bottom: 5px;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
  
  -webkit-box-flex-direction: row;
  -moz-box-flex-direction: row;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;

  -webkit-box-align-content: center;
  -moz-box-align-content: center;
  -webkit-align-content: center;
  -ms-align-content: center;
  align-content: center;

  -webkit-box-flex-align-items: center;
  -moz-box-flex-align-items: center;
  -webkit-flex-align-items: center;
  -ms-flex-align-items: center;
  align-items: center;
}

.card2 {
  padding-top: 5px;
  padding-bottom: 5px;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
  
  -webkit-box-flex-direction: row;
  -moz-box-flex-direction: row;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.card img {
  height: 18px;
  width: auto;
}

.card2 img {
  height: 18px;
  width: auto;
}

.card .cardInfo {
  max-width: 450px;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex; 

  -webkit-box-flex-direction: column;
  -moz-box-flex-direction: column;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;

  -webkit-box-align-content: center;
  -moz-box-align-content: center;
  -webkit-align-content: center;
  -ms-align-content: center;
  align-content: center;
}

.card2 .cardInfo {
  max-width: 450px;
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex; 

  -webkit-box-flex-direction: column;
  -moz-box-flex-direction: column;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;

  -webkit-box-align-content: center;
  -moz-box-align-content: center;
  -webkit-align-content: center;
  -ms-align-content: center;
  align-content: center;
}

.card .cardInfo p {
  margin: 0;
  padding-left: 15px;

  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex; 

  -webkit-box-align-content: center;
  -moz-box-align-content: center;
  -webkit-align-content: center;
  -ms-align-content: center;
  align-content: center;
}

.card2 .cardInfo p {
  margin: 0;
  padding-left: 15px;

  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex; 

  -webkit-box-align-content: center;
  -moz-box-align-content: center;
  -webkit-align-content: center;
  -ms-align-content: center;
  align-content: center;
}

.card .cardInfo img {
  margin-right: 5px;
}

.card2 .cardInfo img {
  margin-right: 5px;
}

#nav {
  margin: 0px !important;
  padding: 0px;
}

#nav a h3 {
  color: #000000;
  margin: 0px;
  padding: 0px;
}

.navbar {
  margin: 0px;
  width: 50%;
  height: 50px;
  border: 2px solid #BF1A2F;
  border-bottom: 0;
  border-radius: 0;
  border-top-left-radius: 2em;
  border-top-right-radius: 2em;

  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex; 

  -webkit-box-align-items: center;
  -moz-box-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center; 

  -webkit-box-justify-content: center;
  -moz-box-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;
}

#work2 {
  border: 2px solid #BF1A2F;
}

#hack2 {
  border: 2px solid #BF1A2F;
}

@media only screen and (min-device-width: 320px)  and (max-device-width: 480px) {
  #photo {
    display: none;
  }

  #text {
    max-width: 445px;
  }

}

@media only screen and (min-device-width: 375px)  and (max-device-width: 650px) {
  #photo {
    display: none;
  }

  #text {
    max-width: 445px;
  }

}

